fixed z-index

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -10,7 +10,7 @@
   -moz-transition: .2s width linear;
   -o-transition: .2s width linear;
   transition: .2s width linear;
-  z-index: 17;
+  z-index: 2;
   .nav:first-child {
     padding-bottom: 15px;
   }
